--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
   appdir:
     description: Set this parameter if you want to switch the working dir to push an app
     required: true
-  CF_API:
+  API:
     description: The Cloud Foundry API endpoint
     required: true
   CF_USERNAME:
